--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -95,6 +95,9 @@
         height: auto;
         margin-bottom: 15rem;
         min-height: 100vh;
+        &--float {
+            // height: 100v;
+        }
         &:last-of-type {
             margin-bottom: 0;
         }
